# camera-calibration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gopro1.txt  i9300.txt  pattern.txt  pattern2.txt  pattern3.txt
calib_data/ground_truth/: calibration_pattern.blend  calibration_pattern.blend1  calibration_pattern_1.blend  calibration_pattern_2.blend  calibration_pattern_3.blend
scripts/: blender_test.py  camera.py
src/: argparser.cpp  argparser.h  calib.cpp  calib.hpp  calibio.cpp  calibio.h  calibpattern.cpp  calibpattern.hpp  homography.cpp  homography.hpp  main.cpp  optimize.cpp  optimize.hpp  routines.cpp  routines.h  utils.cpp  utils.h
tests/600D/: im_files.txt  pattern.txt  real_data.txt
tests/GT-I9300/: im_files.txt  pattern.txt  real_data.txt
tests/GoPro/: im_files.txt  pattern.txt  real_data.txt
